--- a/LocalMultiplayerAgent/LocalMultiplayerAgent.csproj
+++ b/LocalMultiplayerAgent/LocalMultiplayerAgent.csproj
@@ -22,10 +22,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.12.0" />
     <PackageReference Include="Docker.DotNet" Version="3.125.4" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning" Version="4.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="3.0.0-preview5.19227.9" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.0" />
+    <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.1" />
@@ -34,7 +36,7 @@
     <Folder Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\..\Users\t-emidun\source\repos\CSharpSDK\PlayFabSDK\source\PlayFabSDK.csproj" />
+    <ProjectReference Include="..\..\..\..\Users\t-emidun\Downloads\CSharpSDK-1.117.220406\CSharpSDK-1.117.220406\PlayFabSDK\source\PlayFabSDK.csproj" />
     <ProjectReference Include="..\AgentInterfaces\AgentInterfaces.csproj" />
     <ProjectReference Include="..\VmAgent.Core\VmAgent.Core.csproj" />
   </ItemGroup>
